--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 }
 
 html {
+    margin: 0;
     color: #444;
     font-size: 62.5%;
     line-height: 1.15;
@@ -20,8 +21,9 @@ html {
 
 
 body {
-    margin: 0px;
-    padding: 0px;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
     font-family: 'Karla', sans-serif;
     font-size: 1.6rem;
     background: #604543;
@@ -71,12 +73,14 @@ h4 {
     box-sizing: inherit;
 }
 nav {
+    margin: 0;
     z-index: 10;
     position: fixed;
     display: flex;
     width: 100vw;
+    max-width: 100%;
     height: 8rem;
-    padding: 0rem 9.2rem;
+    padding: 0rem 9.2rem ;
     align-items: center;
     justify-content: space-between;
     background: #667a68;
@@ -209,10 +213,6 @@ nav > a {
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
-
-
-
-
 .popular-items-section {
 
     margin: 4rem 9.2rem 8rem 9.2rem;
@@ -375,7 +375,7 @@ padding: 2.4rem 0 1.6rem 0;
     padding: 1.8rem 9.2rem 1.8rem 2.8rem;
     border-radius: 4rem;
     background-color: #667A68;
-    width: 75%;
+    width: 100%;
     min-width: 300px;
     outline: none;
     transition: all 0.2s ease-in-out;
@@ -389,7 +389,7 @@ padding: 2.4rem 0 1.6rem 0;
     cursor: pointer;
     border: none;
     display: block;
-    margin-left: -8.9rem;
+    margin-left: -8.2rem;
     padding: 1.8rem 2.8rem;
     border-radius: 4rem;
     background-color: #46302D;
@@ -548,6 +548,9 @@ footer {
     .news-letter-form {
         margin-top: 0.8rem;
     }
+    .news-letter-form > input[type="email"] {
+        width: 100%;
+    }
     footer {
         padding: 3.2rem 1.6rem;
         column-gap: 1.6rem;
@@ -621,9 +624,7 @@ footer {
         font-size: 2.4rem;
         line-height: 3.2rem;
     }
-    .news-letter-form > input[type="email"] {
-        width: 100%;
-    }
+
     footer {
         padding: 3.2rem 1.6rem;
         column-gap: 1.6rem;
